# FRAME

./: .env  .gitignore  AUTHORS  AUTHORS.md  DEVELOPMENT.md  FRAME.code-workspace  LICENSE.txt  README.md  TODO  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
Translators/: FormatTranslator.py  README.md  odb_to_frame.py  translator.py
doc/: DIEF.html  DIEF.md  FPEF.html  FPEF.md  FloorplanOptimization.ipynb  FloorplanOptimization.md  Floorplan_picts.pptx  Model.pptx  Orthogons.md  PinAssignment.pptx  STROP.md  rect_overlap.ipynb
doc/devel/: README.md
doc/pict/: Floorplan_picts.pptx
examples/cell_grid_ratios/: README.md  initial.py  plots.py
frame/allocation/: allocation.py
frame/die/: README.md  die.py  yaml_parse_die.py
frame/geometry/: fpolygon.py  geometry.py  hanan.py  strop.py
frame/netlist/: module.py  netlist.py  netlist_types.py  yaml_read_netlist.py  yaml_write_netlist.py
frame/utils/: keywords.py  utils.py
models/cell_grid_ratios/: README.md  initial.py  plots.py
models/rect/: README.md  main.py  satmanager.py
outputs/: ami33_force.yaml  ami33_spectral.yaml
src/die/: die.py  test_die.py  yaml_parse_die.py  yaml_read_die.py
src/geometry/: geometry.py  test_geometry.py
src/netlist/: block.py  module.py  netlist.py  netlist_types.py  test_block.py  test_module.py  test_yaml.py  yaml_read_netlist.py  yaml_write_netlist.py
src/utils/: keywords.py  test_utils.py
tests/die/: test_die.py
tests/early_router/: test_early_router.py
tests/floorset_parser/: test_floorset_parser.py
tests/force/: test_force.py
tests/geometry/: test_geometry.py
tests/hello/: test_hello.py
tests/legalizer/: test_legalizer.py  test_legalizer_unit.py
tests/legalrect/: test_legalizer.py  test_legalizer_unit.py
tests/netlist/: test_module.py  test_yaml.py
tests/rect/: test_pseudobool.py  test_satmanager.py
tests/utils/: test_utils.py
tools/: frame.py  frame_tools.py
tools/GP/: GP.py  readme.md
tools/all/: README.md  all.py
tools/attrrep/: pseudo_solver.py
tools/draw/: README.md  draw.py
tools/early_router/: build_model.py  compare_solutions.py  draw.py  hanan.py  isdp_parser.py  ispd_parser.py  main_router.py  manager.py  types.py  utils.py
tools/fastpswap/: anneal.py  fastpswap.py  (+1 more)
(+730 files in other folders)
